unpackaged/main/default/objects/Quote__c/Quote__c.object-meta.xml
<CustomObject>
    <description>Custom object to support Quote functionality for Logistics and other businesses (e.g. Graphics)</description>
    <label>Quote</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Quote Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>