unpackaged/main/default/objects/Quote__c/fields/Additional_Labor__c.field-meta.xml
<CustomField>
    <fullName>Additional_Labor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Charged per labor / hour</description>
    <label>Additional Labor</label>
    <type>Checkbox</type>
</CustomField>