unpackaged/main/default/objects/Quote__c/fields/Addl_Information__c.field-meta.xml
<CustomField>
    <fullName>Addl_Information__c</fullName>
    <description>Additional Information (for Non-GES Show)</description>
    <label>Addl Information</label>
    <type>TextArea</type>
</CustomField>