unpackaged/main/default/objects/Quote__c/fields/AGS_Beyond_Point__c.field-meta.xml
<CustomField>
    <fullName>AGS_Beyond_Point__c</fullName>
    <formula>HYPERLINK(&#39;http://ges.agsystems.com/Forms.html&#39;,&#39;AGS Beyond Point&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AGS Beyond Point</label>
    <type>Text</type>
</CustomField>