unpackaged/main/default/objects/Quote__c/fields/AM_Specified__c.field-meta.xml
<CustomField>
    <fullName>AM_Specified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Min $125.00</description>
    <label>AM Specified</label>
    <type>Checkbox</type>
</CustomField>