unpackaged/main/default/objects/Quote__c/fields/AM_Specified_Fee__c.field-meta.xml
<CustomField>
    <fullName>AM_Specified_Fee__c</fullName>
    <description>Min $125</description>
    <label>IN AM Specified Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>