unpackaged/main/default/objects/Quote__c/fields/Apply_Round_Trip_Discount__c.field-meta.xml
<CustomField>
    <fullName>Apply_Round_Trip_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply Round Trip Discount</label>
    <type>Checkbox</type>
</CustomField>