unpackaged/main/default/objects/Quote__c/fields/Attempt_Fee__c.field-meta.xml
<CustomField>
    <fullName>Attempt_Fee__c</fullName>
    <label>IN Attempt Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>