unpackaged/main/default/objects/Quote__c/fields/Booth__c.field-meta.xml
<CustomField>
    <fullName>Booth__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booth Lookup</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Oracle_Show_Booth__c.Show_Occurrence__c</field>
            <operation>equals</operation>
            <valueField>$Source.Show_Occurrence__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Oracle_Show_Booth__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>