unpackaged/main/default/objects/Quote__c/fields/Booth_Number__c.field-meta.xml
<CustomField>
    <fullName>Booth_Number__c</fullName>
    <formula>Booth__r.BOOTH_NUMBER__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booth #</label>
    <type>Text</type>
</CustomField>