unpackaged/main/default/objects/Quote__c/fields/Call_Before_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Call_Before_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Call customer before delivery.</description>
    <label>Call Before Delivery</label>
    <type>Checkbox</type>
</CustomField>