unpackaged/main/default/objects/Quote__c/fields/Call_Before_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Call_Before_Pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Call customer before pickup.</description>
    <label>Call Before Pickup</label>
    <type>Checkbox</type>
</CustomField>