unpackaged/main/default/objects/Quote__c/fields/Carrier_Notes__c.field-meta.xml
<CustomField>
    <fullName>Carrier_Notes__c</fullName>
    <description>Special instructions</description>
    <label>Carrier Notes</label>
    <type>TextArea</type>
</CustomField>