unpackaged/main/default/objects/Quote__c/fields/Class_of_Service__c.field-meta.xml
<CustomField>
    <fullName>Class_of_Service__c</fullName>
    <label>Class of Service</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Next Day</fullName>
            </value>
            <value>
                <fullName>2nd Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>