unpackaged/main/default/objects/Quote__c/fields/Complete_By__c.field-meta.xml
<CustomField>
    <fullName>Complete_By__c</fullName>
    <description>Complete Quote By</description>
    <label>Complete By</label>
    <type>Date</type>
</CustomField>