unpackaged/main/default/objects/Quote__c/fields/Copy_To_OB_Destination_Address__c.field-meta.xml
<CustomField>
    <fullName>Copy_To_OB_Destination_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy to OB Destination Address</label>
    <type>Checkbox</type>
</CustomField>