unpackaged/main/default/objects/Quote__c/fields/Custom_Quote__c.field-meta.xml
<CustomField>
    <fullName>Custom_Quote__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom quote flag for Inbound</description>
    <label>Custom Quote</label>
    <type>Checkbox</type>
</CustomField>