unpackaged/main/default/objects/Quote__c/fields/Delivery_Booth_No__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Booth_No__c</fullName>
    <description>If Shipment for another Show</description>
    <label>Delivery Booth #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>