unpackaged/main/default/objects/Quote__c/fields/Delivery_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact_Email__c</fullName>
    <label>Delivery Contact Email</label>
    <type>Email</type>
</CustomField>