unpackaged/main/default/objects/Quote__c/fields/Delivery_Contact_Fax__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact_Fax__c</fullName>
    <description>Inbound Shipment Delivery Contact Fax</description>
    <label>Delivery Contact Fax</label>
    <type>Phone</type>
</CustomField>