unpackaged/main/default/objects/Quote__c/fields/Delivery_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact_Phone__c</fullName>
    <description>Inbound Delivery Contact Phone</description>
    <label>Delivery Contact Phone</label>
    <type>Phone</type>
</CustomField>