unpackaged/main/default/objects/Quote__c/fields/Delivery_Destination__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Destination__c</fullName>
    <description>Inbound Delivery Destination</description>
    <label>Delivery Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>