unpackaged/main/default/objects/Quote__c/fields/Delivery_Show_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Show_Contractor__c</fullName>
    <description>Delivery Show Contractor when shipping is from a Show to another Show</description>
    <label>Delivery Show Contractor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>