unpackaged/main/default/objects/Quote__c/fields/Delivery_Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Show_Name__c</fullName>
    <description>Show Name, if shipment is going to another Show</description>
    <label>Delivery Show Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>