unpackaged/main/default/objects/Quote__c/fields/Destination_City__c.field-meta.xml
<CustomField>
    <fullName>Destination_City__c</fullName>
    <label>Destination City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>