unpackaged/main/default/objects/Quote__c/fields/Destination_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>Destination_Shipping_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Address (Lookup)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Account_Id__c</field>
            <operation>equals</operation>
            <valueField>Shipping_Address__c.Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Shipping_Address__c</referenceTo>
    <relationshipLabel>Quotes (Destination Address)</relationshipLabel>
    <relationshipName>Quotes_Destination_Shipping_Address</relationshipName>
    <type>Lookup</type>
</CustomField>