unpackaged/main/default/objects/Quote__c/fields/Destination_Street__c.field-meta.xml
<CustomField>
    <fullName>Destination_Street__c</fullName>
    <description>Inbound Shipping Destination Street Address</description>
    <label>Destination Street</label>
    <type>TextArea</type>
</CustomField>