unpackaged/main/default/objects/Quote__c/fields/Discount_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Discount_End_Date__c</fullName>
    <formula>IF(NOT(ISNULL(Show_Occurrence__c)),  Show_Occurrence__r.Early_Order_Deadline__c , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount End Date</label>
    <type>Date</type>
</CustomField>