unpackaged/main/default/objects/Quote__c/fields/EDV_Amount__c.field-meta.xml
<CustomField>
    <fullName>EDV_Amount__c</fullName>
    <description>Declared Value</description>
    <inlineHelpText>Enter EDV value only if client provided written acceptance.</inlineHelpText>
    <label>EDV Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>