unpackaged/main/default/objects/Quote__c/fields/EDV_Amount_Exceeds_Limit__c.field-meta.xml
<CustomField>
    <fullName>EDV_Amount_Exceeds_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User needs to select checkbox, if EDV amount is &gt; 20,000</description>
    <inlineHelpText>Check this box if EDV &gt; 20,000</inlineHelpText>
    <label>Confirm EDV &gt; 20,000</label>
    <type>Checkbox</type>
</CustomField>