unpackaged/main/default/objects/Quote__c/fields/Formula_Merged_AR_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Formula_Merged_AR_Customer_Number__c</fullName>
    <formula>If(Booth__c!=null,IF(Booth__r.Oracle_AR_Customer_Number__c =&#39;&#39;,Booth__r.Oracle_Customer_Number__c ,Booth__r.Oracle_AR_Customer_Number__c ), If(Merged_AR_Customer_Number__c!=null, Merged_AR_Customer_Number__r.AR_Customer_Number__c,&#39;&#39; ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merged AR Customer Number</label>
    <type>Text</type>
</CustomField>