unpackaged/main/default/objects/Quote__c/fields/GBMS_ID__c.field-meta.xml
<CustomField>
    <fullName>GBMS_ID__c</fullName>
    <description>To keep the oracle AR customer number of loosing accounts on Quote</description>
    <label>Merged GBMS ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>