unpackaged/main/default/objects/Quote__c/fields/Hazardous_Materials__c.field-meta.xml
<CustomField>
    <fullName>Hazardous_Materials__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Inbound Hazardous Materials</description>
    <label>Hazardous Materials</label>
    <type>Checkbox</type>
</CustomField>