unpackaged/main/default/objects/Quote__c/fields/HM_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>HM_Contact_Phone__c</fullName>
    <description>Hazardous Material Contact Phone Number</description>
    <label>HM Contact Phone</label>
    <type>Phone</type>
</CustomField>