unpackaged/main/default/objects/Quote__c/fields/IN_New_York_City_Fee__c.field-meta.xml
<CustomField>
    <fullName>IN_New_York_City_Fee__c</fullName>
    <label>IN New York City Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>