unpackaged/main/default/objects/Quote__c/fields/Inbound_Owner__c.field-meta.xml
<CustomField>
    <fullName>Inbound_Owner__c</fullName>
    <label>Inbound Owner</label>
    <length>120</length>
    <type>Text</type>
</CustomField>