unpackaged/main/default/objects/Quote__c/fields/Inside_Pickup__c.field-meta.xml
<CustomField>
    <fullName>Inside_Pickup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inside Pickup</label>
    <type>Checkbox</type>
</CustomField>