unpackaged/main/default/objects/Quote__c/fields/Inside_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Inside_Surcharge__c</fullName>
    <label>IN Inside Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>