unpackaged/main/default/objects/Quote__c/fields/Lift_Gate__c.field-meta.xml
<CustomField>
    <fullName>Lift_Gate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lift Gate</label>
    <type>Checkbox</type>
</CustomField>