unpackaged/main/default/objects/Quote__c/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract with another Carrier</fullName>
            </value>
            <value>
                <fullName>Going with Show Organizer</fullName>
            </value>
            <value>
                <fullName>No longer going to the show</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Quoting Process took too long</fullName>
            </value>
            <value>
                <fullName>Transit time issue</fullName>
            </value>
            <value>
                <fullName>Duplicate Quote</fullName>
            </value>
            <value>
                <fullName>Show Open</fullName>
            </value>
            <value>
                <fullName>Will not need</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>