unpackaged/main/default/objects/Quote__c/fields/Merged_AR_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Merged_AR_Customer_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merge AR Customer Number</label>
    <referenceTo>AR_Customer_Info__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>