unpackaged/main/default/objects/Quote__c/fields/Merged_Oracle_AR_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Merged_Oracle_AR_Customer_Number__c</fullName>
    <description>To keep the oracle AR customer number of loosing accounts on Quote</description>
    <label>Merged Oracle AR Customer Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>