unpackaged/main/default/objects/Quote__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Any alerts on the Quote (e.g. when attributes which affect rates is changed, then give an error alert here)</description>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>