unpackaged/main/default/objects/Quote__c/fields/NY_City__c.field-meta.xml
<CustomField>
    <fullName>NY_City__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NY City</label>
    <type>Checkbox</type>
</CustomField>