unpackaged/main/default/objects/Quote__c/fields/OB_Additional_Labor__c.field-meta.xml
<CustomField>
    <fullName>OB_Additional_Labor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Labor</label>
    <type>Checkbox</type>
</CustomField>