unpackaged/main/default/objects/Quote__c/fields/OB_Additional_Labor_Fee__c.field-meta.xml
<CustomField>
    <fullName>OB_Additional_Labor_Fee__c</fullName>
    <description>Per labor / hour</description>
    <label>OB Additional Labor Fee</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>