unpackaged/main/default/objects/Quote__c/fields/OB_Addl_Information__c.field-meta.xml
<CustomField>
    <fullName>OB_Addl_Information__c</fullName>
    <label>Addl Information</label>
    <type>TextArea</type>
</CustomField>