unpackaged/main/default/objects/Quote__c/fields/OB_Advance_Order_Discount__c.field-meta.xml
<CustomField>
    <fullName>OB_Advance_Order_Discount__c</fullName>
    <label>OB Advance Order Discount (%)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>