unpackaged/main/default/objects/Quote__c/fields/OB_AM_Specified__c.field-meta.xml
<CustomField>
    <fullName>OB_AM_Specified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AM Specified</label>
    <type>Checkbox</type>
</CustomField>